--- a/component/style.css
+++ b/component/style.css
@@ -10,7 +10,7 @@ ul li{
   margin: 1em;
   right: 0;
   z-index: 998;
-  
+  direction: ltr;
 }
 
 .fab {
@@ -778,8 +778,8 @@ strong.chat_time {
     background: white;
     padding: 18px;
     margin: 25px;
-    -webkit-box-shadow: 0px 0px 11px 5px #CCCCCC;
-    box-shadow: 0px 0px 11px 5px #CCCCCC;
+    -webkit-box-shadow: 0px 0px 11px 5px #424242;
+    box-shadow: 0px 0px 11px 5px #424242;
 	color: #1F115A;
 
 	-webkit-animation: zoomIn .5s cubic-bezier(.42, 0, .58, 1);
