--- a/component/styles/typing.css
+++ b/component/styles/typing.css
@@ -1,6 +1,6 @@
 /* style "loading" or "typing" stae */
 
-.bubble-typing {
+.mhndbubble-typing {
 	width: 38px;
 	padding: 12px 16px;
 	height: 8px;
