--- a/component/styles/input.css
+++ b/component/styles/input.css
@@ -1,5 +1,5 @@
 /* style user input field */
-.bubble-container .input-wrap {
+.mhndbubble-container .input-wrap {
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -7,7 +7,7 @@
 	font-family: "Helvetica Neue", Helvetica, sans-serif;
 	color: #2c2c2c;
 }
-.bubble-container .input-wrap textarea {
+.mhndbubble-container .input-wrap textarea {
 	width: calc(100% - 20px);
 	font-family: "Helvetica Neue", Helvetica, sans-serif;
 	color: #2c2c2c;
@@ -23,14 +23,14 @@
 	box-shadow: 0 0 0 1px #d0d0d0 inset;
 	line-height: 1.25em;
 }
-.bubble.reply-freeform {
+.mhndbubble.reply-freeform {
 	margin: 0;
 }
-.bubble.reply.reply-freeform.say .bubble-content .bubble-button {
+.mhndbubble.reply.reply-freeform.say .mhndbubble-content .mhndbubble-button {
 	margin-top: 1px;
 	text-align: left;
 }
-.bubble.reply.say.bubble-hidden {
+.mhndbubble.reply.say.mhndbubble-hidden {
 	margin: 0;
 	transform: scale(0);
 	height: 0;
