--- a/component/style2.css
+++ b/component/style2.css
@@ -784,6 +784,10 @@ strong.chat_time {
 	-webkit-animation: zoomIn .5s cubic-bezier(.42, 0, .58, 1);
     animation: zoomIn .5s cubic-bezier(.42, 0, .58, 1);
 }
+#prime{
+display:inline-block;
+}
+
 .chat{
 display: none;	
 }
